--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -4,17 +4,11 @@
   height: 600px;
 }
 /* Use a media query to adjust the dimensions of the game canvas if the resulting height is smaller than the screen height */
-@media only screen and (max-height: calc(100vw / 800 * 600)) {
+@media only screen and (max-height: 600px) {
   #phaser canvas {
     width: calc(100vh / 600 * 800);
     height: 100vh;
   }
-}
-
-.game-canvas-wrapper {
-  width: 800px;
-  height: 600px;
-  overflow: hidden;
 }
 
 /* Use media queries to adjust the dimensions of the game canvas for smaller screens */
