--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -9,13 +9,21 @@
 
 /* Define the dimensions of the game canvas */
 #phaser canvas {
-  width: 100vw;
-  height: calc(100vw / 960 * 540);
+  width: 960px;
+  height: 540px;
 }
 
-/* @media screen and not (display-mode: fullscreen) {
-  #phaser canvas {
-    width: 100vw;
-    height: calc(100vw / 960 * 540);
+@media not (display-mode: fullscreen) {
+  @media (max-aspect-ratio: 16/9) {
+    #phaser canvas {
+      width: 100vw;
+      height: calc(100vw / 960 * 540);
+    }
   }
-} */
+  @media not (max-aspect-ratio: 16/9) {
+    #phaser canvas {
+      width: calc(100vh / 1080 * 1920);
+      height: 100vh;
+    }
+  }
+}
