--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -10,20 +10,5 @@
 /* Define the dimensions of the game canvas */
 #phaser canvas {
   width: 960px;
-  height: 540px;
-}
-
-@media not (display-mode: fullscreen) {
-  @media (max-aspect-ratio: 16/9) {
-    #phaser canvas {
-      width: 100vw;
-      height: calc(100vw / 960 * 540);
-    }
-  }
-  @media not (max-aspect-ratio: 16/9) {
-    #phaser canvas {
-      width: calc(100vh / 1080 * 1920);
-      height: 100vh;
-    }
-  }
+  height: calc(100vh / 960 * 540);
 }
