--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -9,6 +9,6 @@
 
 /* Define the dimensions of the game canvas */
 #phaser canvas {
-  width: 960px;
+  width: 100vw;
   height: calc(90vh - 120px), -webkit-calc(90vh - 20px);
 }
