--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -10,5 +10,11 @@
 /* Define the dimensions of the game canvas */
 #phaser canvas {
   width: 100vw;
-  height: calc(90vh - 120px), -webkit-calc(90vh - 20px);
+  height: 56.25vw; /* height:width ratio = 9/16 = .5625  */
+  background: pink;
+  max-height: 100vh;
+  max-width: 177.78vh; /* 16/9 = 1.778 */
+  margin: auto;
+  left: 0;
+  right: 0; /* horizontal center */
 }
