--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -13,7 +13,7 @@
   height: 540px;
 }
 @media not (display-mode: fullscreen) {
-  @media (max-height: 240px) {
+  @media (min-height: 240px) {
     #phaser canvas {
       width: 100vw;
       height: 56.25vw; /* height:width ratio = 9/16 = .5625  */
@@ -25,7 +25,7 @@
       right: 0; /* horizontal center */
     }
   }
-  @media (max-width: 260px) {
+  @media (min-width: 260px) {
     #phaser canvas {
       width: 100vw;
       height: 56.25vw; /* height:width ratio = 9/16 = .5625  */
