--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -12,29 +12,17 @@
   width: 960px;
   height: 540px;
 }
-@media not (display-mode: fullscreen) {
-  @media (min-height: 240px) {
+@media not (min-width: 960px) and (min-height: 540px) {
+  @media (max-aspect-ratio: 16/9) {
     #phaser canvas {
       width: 100vw;
-      height: 56.25vw; /* height:width ratio = 9/16 = .5625  */
-      background: pink;
-      max-height: 100vh;
-      max-width: 177.78vh; /* 16/9 = 1.778 */
-      margin: auto;
-      left: 0;
-      right: 0; /* horizontal center */
+      height: calc(100vw / 960 * 540);
     }
   }
-  @media (min-width: 260px) {
+  @media not (max-aspect-ratio: 16/9) {
     #phaser canvas {
-      width: 100vw;
-      height: 56.25vw; /* height:width ratio = 9/16 = .5625  */
-      background: pink;
-      max-height: 100vh;
-      max-width: 177.78vh; /* 16/9 = 1.778 */
-      margin: auto;
-      left: 0;
-      right: 0; /* horizontal center */
+      width: calc(100vh / 1080 * 1920);
+      height: 100vh;
     }
   }
 }
