--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -1,27 +1,18 @@
-/* @font-face {
-  font-family: 'MyDisplayFont';
-  src: url('assets/fonts/NotoSansDisplay-Black.ttf');
-}
-@font-face {
-  font-family: 'MyMonoFont';
-  src: url('assets/fonts/NotoMono-Regular.ttf');
-} */
-
 /* Define the dimensions of the game canvas */
 #phaser canvas {
   width: 960px;
   height: 540px;
 }
-@media not (min-width: 960px) and (min-height: 540px) {
+@media not ((min-width: 960px) and (min-height: 540px)) {
   @media (max-aspect-ratio: 16/9) {
     #phaser canvas {
       width: 100vw;
-      height: calc(100vw / 960 * 540);
+      height: calc(100vw / 960px * 540px);
     }
   }
   @media not (max-aspect-ratio: 16/9) {
     #phaser canvas {
-      width: calc(100vh / 1080 * 1920);
+      width: calc(100vh / 1080px * 1920px);
       height: 100vh;
     }
   }
