--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -4,16 +4,8 @@
   height: 180px;
 }
 @media not ((min-width: 960px) and (min-height: 540px)) {
-  @media (max-aspect-ratio: 16/9) {
-    #phaser canvas {
-      width: 100vw;
-      height: calc(100vw / 960px * 540px);
-    }
-  }
-  @media not (max-aspect-ratio: 16/9) {
-    #phaser canvas {
-      width: calc(100vh / 1080px * 1920px);
-      height: 100vh;
-    }
+  #phaser canvas {
+    width: 120px;
+    height: 80px;
   }
 }
