--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -3,9 +3,9 @@
   width: 320px;
   height: 180px;
 }
-@media not ((min-width: 960px) and (min-height: 540px)) {
+/* @media not ((min-width: 960px) and (min-height: 540px)) {
   #phaser canvas {
     width: 120px;
     height: 80px;
   }
-}
+} */
