--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -1,7 +1,13 @@
 /* Define the dimensions of the game canvas */
 #phaser canvas {
-  width: 320px;
-  height: 180px;
+  width: 960px;
+  height: 540px;
+}
+@media (min-width: 320px) {
+  #phaser canvas {
+    width: 320px;
+    height: 180px;
+  }
 }
 /* @media not ((min-width: 960px) and (min-height: 540px)) {
   #phaser canvas {
