--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -3,7 +3,7 @@
   width: 960px;
   height: 540px;
 }
-@media (min-width: 320px) {
+@media (min-width: 60em) {
   #phaser canvas {
     width: 320px;
     height: 180px;
