--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -3,10 +3,18 @@
   width: 960px;
   height: 540px;
 }
-@media (min-width: 60em) {
-  #phaser canvas {
-    width: 320px;
-    height: 180px;
+@media (min-width: 320px) {
+  @media (max-aspect-ratio: 16/9) {
+    #phaser canvas {
+      width: 100vw;
+      height: calc(100vw / 960 * 540);
+    }
+  }
+  @media not (max-aspect-ratio: 16/9) {
+    #phaser canvas {
+      width: calc(100vh / 1080 * 1920);
+      height: 100vh;
+    }
   }
 }
 /* @media not ((min-width: 960px) and (min-height: 540px)) {
