--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -1,25 +1,25 @@
 /* Define the dimensions of the game canvas */
 #phaser canvas {
-  width: 960px;
-  height: 540px;
+  width: 94px;
+  height: 54px;
 }
 @media (min-width: 320px) {
   @media (max-aspect-ratio: 16/9) {
     #phaser canvas {
       width: 100vw;
-      height: calc(100vw / 960 * 540);
+      height: 56.25vw;
     }
   }
-  @media not (max-aspect-ratio: 16/9) {
+  @media (min-aspect-ratio: 16/9) {
     #phaser canvas {
-      width: calc(100vh / 1080 * 1920);
+      width: 177.78vh;
       height: 100vh;
     }
   }
 }
-/* @media not ((min-width: 960px) and (min-height: 540px)) {
+@media ((min-width: 1920px) and (min-height: 1080px)) {
   #phaser canvas {
-    width: 120px;
-    height: 80px;
+    width: 1920px;
+    height: 1080px;
   }
-} */
+}
