--- a/public/assets/css/phaser.css
+++ b/public/assets/css/phaser.css
@@ -45,6 +45,7 @@
 #phaser canvas {
   width: 94px;
   height: 54px;
+  cursor: none;
 }
 @media (min-width: 320px) {
   @media (max-aspect-ratio: 16/9) {
